// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <p
      className="list-header__summary"
    >
      Showing 
      <span>
        0
      </span>
       expense
      s
       (
      4
       hidden)
    </p>
    <p
      className="list-header__summary"
    >
      Total: 
      <span>
        $0.00
      </span>
    </p>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`Should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <p
      className="list-header__summary"
    >
      Showing 
      <span>
        4
      </span>
       expense
      s
       (
      0
       hidden)
    </p>
    <p
      className="list-header__summary"
    >
      Total: 
      <span>
        $10.00
      </span>
    </p>
  </div>
  <div
    className="list-body"
  >
    <Component
      amount={100}
      category="food"
      createdAt={0}
      description="Pineapple"
      id="1"
      key="1"
      note=""
    />
    <Component
      amount={200}
      category="general"
      createdAt={-345600000}
      description="Banana"
      id="2"
      key="2"
      note=""
    />
    <Component
      amount={300}
      category="transportation"
      createdAt={345600000}
      description="Apple"
      id="3"
      key="3"
      note=""
    />
    <Component
      amount={400}
      category="personal"
      createdAt={-864000000}
      description="Mango"
      id="4"
      key="4"
      note=""
    />
  </div>
</div>
`;
